# TeamProject

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  frontend-ci.yml  pr-checks.yml
backend/: .env.example  .flake8  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: d7ae3f631ba1_initial_migration_create_users_projects_.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  attachments.py  auth.py  boards.py  comments.py  issues.py  notifications.py  priorities.py  projects.py  search.py  sprints.py  statuses.py  users.py  workflows.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py
backend/app/models/: __init__.py  attachment.py  board.py  issue.py  notification.py  project.py  sprint.py  status.py  user.py  workflow.py
backend/tests/: conftest.py  test_boards.py  test_comments.py  test_issues.py  test_main.py  test_notifications.py  test_projects.py  test_search.py  test_sprints.py  test_statuses.py  test_users.py  test_workflows.py
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: api.ts
frontend/src/components/: Button.tsx  Form.tsx  Header.css  Header.tsx  Input.tsx  Layout.css  Layout.tsx  OrgCard.tsx  Sidebar.css  Sidebar.tsx  UserAvatar.tsx
frontend/src/hooks/: use-notification.ts  useProjectList.ts
frontend/src/layout/: DashboardLayout.tsx  Topbar.tsx
frontend/src/layout/components/: NotificationItem.tsx  NotificationPopover.tsx  ShortcutsMenu.tsx
frontend/src/layout/data/: notifications.ts
frontend/src/pages/: Dashboard.css  Dashboard.tsx
frontend/src/pages/Dashboard/: page.tsx
frontend/src/pages/Dashboard/components/: CreateProjectModal.tsx  ProjectCard.tsx  TaskRow.tsx
frontend/src/pages/Dashboard/schemas/: project.ts
frontend/src/pages/Login/: page.tsx
frontend/src/pages/Login/components/: AuthLayout.tsx  LoginForm.tsx  LoginHero.tsx
frontend/src/pages/Login/schemas/: login.ts
frontend/src/pages/Project/: ProjectPage.tsx
frontend/src/pages/Project/components/: BoardView.tsx  CreateTaskModel.tsx  ListView.tsx  ProjectHeader.tsx  SummaryView.tsx
frontend/src/pages/Project/data/: useProjectData.ts
frontend/src/pages/ProjectPage/: ProjectsPage.tsx
frontend/src/pages/ProjectPage/api/: projectService.ts
frontend/src/pages/ProjectPage/components/: CreateProjectModal.tsx  ProjectCard.tsx
frontend/src/pages/ProjectPage/types/: index.ts
frontend/src/pages/SignUp/: page.tsx
frontend/src/pages/SignUp/components/: SignUpForm.tsx  SignUpHero.tsx
frontend/src/pages/SignUp/schemas/: signup.ts
frontend/src/pages/WelcomePage/: page.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: api.ts
frontend/src/tests/: App.test.tsx
